2005-03-20  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-fau.el: new file.

2005-03-19  Takashi Hiromatsu  <matsuan@ca2.so-net.ne.jp>

	* shimbun/sb-sourceforge-jp.el (shimbun-sourceforge-jp-mailing-lists):
	Add groups macemacsjp-users, macemacsjp-dev and macemacsjp-english.

2005-03-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (very-slow): Don't mv non-existent files.

	* w3m-e19.el (easy-menu-remove-item): Don't autoload it.

	* w3m-om.el (easy-menu-remove-item): Ditto.

	* w3m-rss.el (match-string-no-properties): Avoid warning for Emacs
	19 and XEmacs.
	(split-string): Avoid warning for Emacs 19.

	* w3m-symbol.el: Require cl when compiling.

	* w3m-tabmenu.el (easy-menu-remove-item): Aautoload it for Emacs 19.

	* w3m.el: Autoload widget-get to avoid compile warning for Emacs 19.
	(w3m): Remove unused bound variable.

	* w3mhack.el: Bind executable-binary-suffixes to the proper value
	for OS/2 and emx while checking for the shell command; cause an
	error only when compiling or formatting files.

	* attic/addpath.el: Make it work with old Emacsen even if cl is
	not loaded; load custom, bind defcustom'ed variables and make the
	locate-library function run quietly for Emacs 19; synch the code
	testing the shell command with w3mhack.el.
	(char-after): Add a byte-optimizer for Emacs 19.

	* w3m-ccl.el: Load w3m-om instead of autoloading it for charset-id.

	* w3m-util.el: Load cl independently when compiling.

2005-03-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el: Check whether the shell command can be used.

	* attic/addpath.el: Ditto; add early-package-load-path to
	load-path for XEmacs 21.5.

	* shimbun/nnshimbun.el: Load gnus-bcklg safely (see the comment).

2005-03-17  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-favicon.el: Add autoload of `w3m-url-readable-string'.

2005-03-17  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* w3m.el (w3m-check-header-tags): Check abnormal `base' url.

2005-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>
